docs/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
    environment: production
    managed-by: github-actions
