docs/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inaproc-api-gateway-docs
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: inaproc-api-gateway-docs
    component: documentation
spec:
  ingressClassName: nginx
  rules:
  - host: data.eproc.dev
    http:
      paths:
      - path: /api-docs
        pathType: Prefix
        backend:
          service:
            name: inaproc-api-gateway-docs
            port:
              number: 3000
